hphp/hack/test/typecheck/union/map_corner_case.php.exp
WARN: File "map_corner_case.php", line 13, characters 10-32:
This null coalesce will always evaluate to its right-hand side. (Warn[12023])
  File "collections/Map.hhi", line 444, characters 35-37:
  The expression on the left has type `null` which is always `null`.
WARN: File "map_corner_case.php", line 14, characters 10-32:
This null coalesce will always evaluate to its right-hand side. (Warn[12023])
  File "collections/Map.hhi", line 444, characters 35-37:
  The expression on the left has type `null` which is always `null`.
ERROR: File "map_corner_case.php", line 24, characters 5-17:
Invalid assignment (Typing[4110])
  File "map_corner_case.php", line 13, characters 27-32:
  Expected `nothing` because type parameter `Tv` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
  File "collections/Map.hhi", line 444, characters 36-37:
    via this generic `Tv`
  File "map_corner_case.php", line 14, characters 27-32:
  But got `Map<(arraykey & _), _>`
ERROR: File "map_corner_case.php", line 25, characters 5-17:
Invalid assignment (Typing[4110])
  File "map_corner_case.php", line 5, characters 14-19:
  Expected `nothing` because type parameter `Tv` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
  File "collections/Map.hhi", line 444, characters 36-37:
    via this generic `Tv`
  File "map_corner_case.php", line 13, characters 27-32:
  But got `Map<(arraykey & _), nothing>`
ERROR: File "map_corner_case.php", line 25, characters 5-17:
Invalid assignment (Typing[4110])
  File "map_corner_case.php", line 12, characters 27-32:
  Expected `nothing` because type parameter `Tv` of `HH\Map` could not be determined. Please add explicit type parameters to the invocation of `HH\Map`
  File "collections/Map.hhi", line 444, characters 36-37:
    via this generic `Tv`
  File "map_corner_case.php", line 13, characters 27-32:
  But got `Map<(arraykey & _), nothing>`
